--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
 		<nav class="animated">
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="layouts/tag.html">Post</a></li>
+				<!-- <li><a href="tag_EX.html">Post</a></li> -->
 				<li>
 
 					<!-- 검색 폼 -->
