--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -1,1 +1,102 @@
-1-------------------<br>
+---
+layout: default
+---
+<!-- 포스트 내용 인덱스 -->
+
+<!DOCTYPE HTML>
+<html lang="ko-KR">
+
+<head>
+  <script src="/js/jquery-2.1.0.min.js"></script>
+</head>
+
+<body>
+  <!-- 헤더 -->
+  <header>
+    {% include header.html %}
+  </header>
+
+
+
+  <!-- 본문 시작 -->
+  <div id="container">
+    <!-- 게시물 내용 시작 -->
+    <div id="main" class="post" itemscope itemprop="blogPost">
+      <article itemprop="articleBody">
+        <!-- 블로그 제목 -->
+        <header class="article-info clearfix">
+          <h1 itemprop="name">
+
+            <a href="#" title="{{ page.title }}" itemprop="url">{{ page.title }}</a>
+          </h1>
+          <p class="article-time">
+            <time datetime="{{ page.date }}" itemprop="datePublished">{{ page.date | date: "%B %d, %Y" }}</time>
+          </p>
+        </header>
+
+        <!-- 블로그 내용 -->
+        <figure class="highlight bash">
+          <br>
+          {{ content }}
+          <br>
+        </figure>
+
+        <!-- 블로그 하단 -->
+        <footer class="article-footer clearfix">
+          <div class="article-share" id="share">
+            <div data-url="{{ site.url }}{{ page.url }}" data-title="{{ page.title }} | {{ site.title }}"
+              data-tsina="null" class="share clearfix">
+            </div>
+          </div>
+          
+        </footer>
+      </article>
+    </div>
+    <!-- 게시물 내용 끝 -->
+
+
+
+
+    <!-- 우측 바  -->
+    {% include rightbar.html %}
+
+
+
+    <!-- 코멘트 -->
+    <section id="comment">
+      <div id="disqus_thread"></div>
+      <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'zhaoleiteng'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function () {
+          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by
+          Disqus.</a></noscript>
+      <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+    </section>
+
+
+  </div>
+  <!-- 본문 끝 -->
+
+
+  <!-- 푸터 -->
+  {% include footer.html %}
+
+
+
+
+
+  <!-- 추가 푸터 -->
+  {% include footerPlusMenu.html %}
+
+
+</body>
+
+</html>
