--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,24 +1,9 @@
-
 <!DOCTYPE HTML>
+
 <html lang="ko-KR">
 
 <head>
   <script src="/js/jquery-2.1.0.min.js"></script>
-  <!-- maekdown 파일 내용 불러오기 -->
-  <script>
-    
-
-    // HTML 변경하기 
-    function changeHtml(countMdFile) {
-      // 첫 번째, md 파일 갯수
-      var htmlCopy = '';
-
-      $('#printColumnOUT').html(htmlCopy);
-
-    }
-
-</script>
-
 </head>
 
 <body>
@@ -26,9 +11,12 @@
   <div id="main">
     <!-- markdown 불러오기 -->
     {% include preview.html %}
-    
 
 
 
 
-</div></body></html>
+
+  </div>
+</body>
+
+</html>
