--- a/_includes/preview.html
+++ b/_includes/preview.html
@@ -1,7 +1,7 @@
 <!-- ----------------------------------------------------------------------- -->
 <!-- "pin"이 "true"인 모든 포스트를 allPost에 할당. -->
 {% assign pinned = site.posts | where: "pin", "true" %}
-{% assign default = site.posts | where: "pin", "false" %} <!-- 202308161518 추가: pin이 false인 포스트를 default에 할당 -->
+<!-- {% assign default = site.posts | where: "pin", "false" %} 202308161518 추가: pin이 false인 포스트를 default에 할당 -->
 
 
 <!-- 빈 배열 선언 -->
