--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,8 @@
 	<link rel="stylesheet" href="/css/style.css" type="text/css">
 	<script src="/js/jquery-2.1.0.min.js"></script>
 
+	<!-- 203230821 깃허브 빌드 중 보안 CSP가 걸려서 작성 -->
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://example.com;">
 
 </head>
 
