--- a/_includes/rightbar.html
+++ b/_includes/rightbar.html
@@ -45,6 +45,8 @@
                     {% for category in site.categories %}
                         <li><a href="{{ site.baseurl }}/categories/{{ category[0] | slugify }}"title="{{ category[0] }}">{{ category[0] }}<sup>1</sup></a></li>
                     {% endfor %}
+                    <li><a href="/url.html/indexfalse/index.html"title="etc">etc<sup>1</sup></a></li>
+
                 </ul>
             </div>
 
