--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
 <!-- 헤더 -->
 
 <head>
-<meta charset="UTF-8">
-	<title>Grokeen</title>
+	<meta charset="UTF-8">
+	<title>{{site.title}}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=3, minimum-scale=1">
 	<meta name="author" content="Grokeen">
 	<meta name="description" content="new start">
