--- a/_layouts/cyworld.html
+++ b/_layouts/cyworld.html
@@ -20,6 +20,8 @@ layout: default
                     <div class="main">
                         <div class="mini-room">
                             <img src="img/cyworld/cyworld.jpeg" alt="Mini Room">
+                                <audio src="audio/처음 뵙겠습니다(with 휘성)_지나.mp3" controls autoplay></audio>
+                            </img>
                         </div>
                     </div>
                 </div>
