--- a/_layouts/cyworld.html
+++ b/_layouts/cyworld.html
@@ -20,7 +20,10 @@ layout: default
                     <div class="main">
                         <div class="mini-room">
                             <img src="img/cyworld/cyworld.jpeg" alt="Mini Room">
-                                <audio src="audio/처음 뵙겠습니다(with 휘성)_지나.mp3" controls autoplay></audio>
+                                <audio controls autoplay>
+                                    <source src="audio/처음 뵙겠습니다(with 휘성)_지나.mp3" type="audio/mpeg">
+
+                                </audio>
                             </img>
                         </div>
                     </div>
