--- a/_layouts/cyworld.html
+++ b/_layouts/cyworld.html
@@ -10,8 +10,27 @@ layout: default
     <link rel="apple-touch-icon" href="/pacman.jpg">
 	<link rel="apple-touch-icon-precomposed" href="/pacman.jpg">
     <link rel="stylesheet" href="/css/cyworld.css" type="text/css">
+    <link rel="stylesheet" href="/css/audio.css" type="text/css">
 </head>
 <body>
+    <audio class="player__audio" controls autoplay>
+        <source src="audio/처음 뵙겠습니다(with 휘성)_지나.mp3" type="audio/mpeg">
+
+    </audio>
+    <div class="player">
+        <div class="control">
+            <i class="fas fa-play player__play"></i>
+        </div>
+        <div class="player__info">
+            Don't You Remember - Adele
+            <div class="player__bar">
+                <div class="player__progress"></div>
+            </div>
+        </div>
+        <div class="player__current">0:00</div>
+    </div>
+
+    
     <div class="container">
         <div class="containerdetted">
             <div class="containermain">
@@ -20,10 +39,6 @@ layout: default
                     <div class="main">
                         <div class="mini-room">
                             <img src="img/cyworld/cyworld.jpeg" alt="Mini Room">
-                                <audio controls autoplay>
-                                    <source src="audio/처음 뵙겠습니다(with 휘성)_지나.mp3" type="audio/mpeg">
-
-                                </audio>
                             </img>
                         </div>
                     </div>
