--- a/css/cyworld.css
+++ b/css/cyworld.css
@@ -1,5 +1,10 @@
-
-
+/* 202405191253 김용록 audio 태그 */
+.audioplayer{
+    width: 50%;
+    left: 480px;
+    top: -15px;
+    position: absolute;
+}
 
 .container {
     background-color: #b4d1da;
