--- a/_layouts/cyworld.html
+++ b/_layouts/cyworld.html
@@ -13,10 +13,6 @@ layout: default
     <!-- <link rel="stylesheet" href="/css/audio.css" type="text/css"> -->
 </head>
 <body>
-    
-    <audio class="audioplayer" controls autoplay>
-        <source src="audio/처음 뵙겠습니다(with 휘성)_지나.mp3" type="audio/mpeg">
-    </audio>
     <!-- 202405191253 김용록 오디오 css 주석 -->
     <!-- <div class="player">
         <div class="control">
@@ -35,6 +31,9 @@ layout: default
 
     <!--  -->
     <div class="container">
+        <audio class="audioplayer" controls autoplay=1 allow="autoplay">
+            <source src="audio/처음 뵙겠습니다(with 휘성)_지나.mp3" type="audio/mpeg">
+        </audio>
         <div class="containerdetted">
             <div class="containermain">
                 <!--  -->
@@ -56,10 +55,10 @@ layout: default
                             <li><a href="/url.html/homeindex/index.html">미니룸</a></li>
                         </ul>
                         <ul>
-                            <li><a href="#">일촌평</a></li>
+                            <li><a href="mailto:ygreen0516@gmail.com">일촌평</a></li>
                         </ul>
                         <ul>
-                            <li><a href="mailto:ygreen0516@gmail.com">편지함</a></li>
+                            <li><a href="#">프로젝트</a></li>
                         </ul>
                     </div>
                 </div>
