--- a/css/cyworld.css
+++ b/css/cyworld.css
@@ -1,10 +1,12 @@
 /* 202405191253 김용록 audio 태그 */
 .audioplayer{
-    width: 50%;
-    left: 480px;
-    top: -15px;
+    width: 40%;
+    left: 385px;
+    top: -57px;
+    color: #fff;
     position: absolute;
 }
+
 
 .container {
     background-color: #b4d1da;
